k8s/overlays/k3s/patch-control-plane-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-plane-app
  namespace: platform-apps
spec:
  template:
    spec:
      containers:
        - name: control-plane-app
