k8s/overlays/k3s/patch-load-executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-executor
  namespace: platform-apps
spec:
  template:
    spec:
      containers:
        - name: load-executor
